--- a/styles/Footer.css
+++ b/styles/Footer.css
@@ -4,4 +4,8 @@
   width: 100%;
   position: fixed;
   bottom: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
 }
