--- a/styles/Footer.css
+++ b/styles/Footer.css
@@ -1,13 +1,12 @@
 .footer {
   background-color: white;
-  padding: 0rem 3rem;
   height: 4rem;
   width: 100%;
   position: fixed;
   bottom: 0;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
 }
 
