--- a/styles/Header.css
+++ b/styles/Header.css
@@ -5,9 +5,11 @@
   background-color: white;
   display: flex;
   justify-content: space-between;
-  height: 4rem;
+  height: 5rem;
   padding: 0 2rem;
   align-items: center;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
 }
 
 
@@ -32,6 +34,10 @@
   justify-content: space-between;
   border-radius: 10px;
   color: rgba(0, 0, 0, 0.4);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  box-shadow:
+    -1px -1px 1px rgba(0, 0, 0, 0.1),
+    1px 1px 1px rgba(0, 0, 0, 0.1);
 }
 
 .header .header___searchIcon svg {
