--- a/styles/Footer.css
+++ b/styles/Footer.css
@@ -1,6 +1,6 @@
 .footer {
   background-color: white;
-  height: 4rem;
+  height: 5rem;
   width: 100%;
   position: fixed;
   bottom: 0;
@@ -8,6 +8,8 @@
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  box-shadow: -5px -5px 5px rgba(0, 0, 0, 0.1);
 }
 
 .footer-item {
