--- a/styles/Category.css
+++ b/styles/Category.css
@@ -19,7 +19,7 @@
   text-decoration: none;
   text-align: center;
   color: black;
-  padding: 2rem;
+  padding: 2rem 0;
   background-color: white;
   border: 1px solid rgba(0, 0, 0, 0.05);
 }
