--- a/styles/global.css
+++ b/styles/global.css
@@ -13,3 +13,8 @@ body {
   font-family: brandon, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   margin: 7rem 0;
 }
+
+body * {
+  -webkit-user-select: none;
+  user-select: none;
+}
