--- a/styles/Header.css
+++ b/styles/Header.css
@@ -28,7 +28,7 @@
   background-color: rgba(0, 0, 0, 0.1);
   padding: 0 1rem;
   height: 2rem;
-  width: 15rem;
+  width: 40vw;
   display: flex;
   flex-direction: row;
   align-items: center;
