--- a/styles/global.css
+++ b/styles/global.css
@@ -12,6 +12,8 @@ body {
   color: var(primary-color);
   font-family: brandon, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   margin: 7rem 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 body * {
