--- a/styles/Product.css
+++ b/styles/Product.css
@@ -12,7 +12,7 @@
 .awssld__content {
   background-color: white !important;
   height: max-content !important;
-  margin-top: 2rem !important;
+  margin: 2rem 0 !important;
 }
 
 .awssld__bullets {
