--- a/styles/Products.css
+++ b/styles/Products.css
@@ -1,11 +1,3 @@
-.products-page h1 {
-  padding: 2rem;
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1),
-    -5px -5px 5px rgba(0, 0, 0, 0.1);
-  margin-bottom: 2rem;
-  background-color: white;
-}
-
 .products-all {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -20,7 +12,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 2rem;
+  padding: 1rem 0.5rem;
   border: 1px solid rgba(0, 0, 0, 0.05);
   list-style-type: none;
 }
@@ -43,21 +35,13 @@
 }
 
 .products-page-item-wishlist svg {
-  fill: #02c902;
+  fill: red;
   font-size: 30px;
-  border: 3px solid rgba(0, 0, 0, 0.05);
-  background-color: rgba(0, 0, 0, 0.15);
-  border-radius: 999px;
-}
-
-.products-page-item-wishlist svg:hover {
-  fill: green;
 }
 
 .products-page-item a {
   color: black;
   text-decoration: none;
-  /* text-align: center; */
 }
 
 .products-page-item a:hover {
