--- a/styles/global.css
+++ b/styles/global.css
@@ -7,27 +7,21 @@ body,
 }
 
 body {
-  /* overflow: hidden; */
   background-color: rgba(0, 0, 0, 0.1);
   color: var(primary-color);
   font-family: brandon, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   margin: 4rem 0;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-body * {
-  /* -webkit-user-select: none; */
-  /* user-select: none; */
 }
 
 body h1 {
+  font-size: 1rem;
   background-color: white;
   text-align: center;
   width: 60%;
   margin: 0 auto;
-  border-radius: 5rem 5rem;
-  padding: 1rem 2rem;
+  border-radius: 0 0 5rem 5rem;
+  padding: 1.5rem 2rem 0.5rem;
+  margin-bottom: 2rem;
   box-shadow:
     -5px -5px 5px rgba(0, 0, 0, 0.1),
     5px 5px 5px rgba(0, 0, 0, 0.1) !important;
