--- a/styles/Cart.css
+++ b/styles/Cart.css
@@ -1,5 +1,35 @@
-.cart-all h2 {
+.cart-all {
   background-color: white;
+  padding: 2rem;
+  box-shadow: -5px -5px 5px rgba(0, 0, 0, 0.1),
+    5px 5px 5px rgba(0, 0, 0, 0.1) !important;
+}
+
+.cart-all h2 {
   text-align: center;
-  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.cart-all .loggedout {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.cart-all .loggedout a {
+  text-align: center;
+  color: white;
+  text-decoration: none;
+  cursor: pointer;
+  padding: 1.5rem 4rem;
+  border-radius: 20px;
+  background-color: rgb(0, 110, 255);
+  box-shadow:
+    -5px -5px 5px rgba(0, 0, 0, 0.1),
+    5px 5px 5px rgba(0, 0, 0, 0.1) !important;
+}
+
+.cart-all .loggedout a:hover {
+  background-color: rgb(0, 81, 255);
 }
