--- a/styles/Wishlist.css
+++ b/styles/Wishlist.css
@@ -1,12 +1,35 @@
 .wishlist-all {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1),
-    -5px -5px 5px rgba(0, 0, 0, 0.1);
+  background-color: white;
+  padding: 2rem;
+  box-shadow: -5px -5px 5px rgba(0, 0, 0, 0.1),
+    5px 5px 5px rgba(0, 0, 0, 0.1) !important;
 }
 
 .wishlist-all h2 {
-  background-color: white;
   text-align: center;
-  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.wishlist-all .loggedout {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.wishlist-all .loggedout a {
+  text-align: center;
+  color: white;
+  text-decoration: none;
+  cursor: pointer;
+  padding: 1.5rem 4rem;
+  border-radius: 20px;
+  background-color: rgb(0, 110, 255);
+  box-shadow:
+    -5px -5px 5px rgba(0, 0, 0, 0.1),
+    5px 5px 5px rgba(0, 0, 0, 0.1) !important;
+}
+
+.wishlist-all .loggedout a:hover {
+  background-color: rgb(0, 81, 255);
 }
