--- a/styles/Cart.css
+++ b/styles/Cart.css
@@ -1,10 +1,3 @@
-.cart-all {
-  background-color: white;
-  padding: 2rem;
-  box-shadow: -5px -5px 5px rgba(0, 0, 0, 0.1),
-    5px 5px 5px rgba(0, 0, 0, 0.1) !important;
-}
-
 .cart-all h2 {
   text-align: center;
   margin-bottom: 2rem;
@@ -31,5 +24,56 @@
 }
 
 .cart-all .loggedout a:hover {
+  background-color: rgb(0, 81, 255);
+}
+
+
+
+.price-detail {
+  padding: 2rem 1rem;
+  box-shadow:
+    -5px -5px 5px rgba(0, 0, 0, 0.1),
+    5px 5px 5px rgba(0, 0, 0, 0.1) !important;
+  background-color: white;
+}
+
+.price-detail>* {
+  display: flex;
+  justify-content: space-between;
+}
+
+.price-detail .total {
+  margin-top: 10px;
+  padding: 2px 5px;
+  background-color: rgba(0, 0, 0, 0.1);
+  border-top: 1px solid rgba(0, 0, 0, 0.4);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.4);
+}
+
+
+
+
+
+.place-order {
+  margin: 1rem 0 3rem 0;
+  text-align: center;
+}
+
+.place-order button {
+  color: white;
+  cursor: pointer;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  padding: 1.5rem 4rem;
+  align-self: center;
+  border-radius: 20px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  background-color: rgb(0, 110, 255);
+  box-shadow:
+    -5px -5px 5px rgba(0, 0, 0, 0.1),
+    5px 5px 5px rgba(0, 0, 0, 0.1) !important;
+}
+
+.place-order button:hover {
   background-color: rgb(0, 81, 255);
 }
