--- a/styles/global.css
+++ b/styles/global.css
@@ -26,3 +26,8 @@ body h1 {
     -5px -5px 5px rgba(0, 0, 0, 0.1),
     5px 5px 5px rgba(0, 0, 0, 0.1) !important;
 }
+
+
+body input {
+  font-family: brandon;
+}
