--- a/styles/Cart.css
+++ b/styles/Cart.css
@@ -1,3 +1,7 @@
+.cart-page {
+  margin-bottom: 3rem;
+}
+
 .cart-all h2 {
   text-align: center;
   margin-bottom: 2rem;
@@ -60,6 +64,7 @@
 }
 
 .place-order button {
+  text-decoration: none;
   color: white;
   cursor: pointer;
   margin-top: 2rem;
