--- a/styles/global.css
+++ b/styles/global.css
@@ -11,6 +11,7 @@ body {
   color: var(primary-color);
   font-family: brandon, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   margin: 4rem 0;
+  margin-bottom: 6rem;
 }
 
 body h1 {
