--- a/styles/Home.css
+++ b/styles/Home.css
@@ -6,19 +6,51 @@
     5px 5px 5px rgba(0, 0, 0, 0.1) !important;
 }
 
-.slider-item img {
-  /* width: 100%; */
+.awssld__box .awssld__content {
+  min-height: 100% !important;
+  margin: 0 !important;
 }
 
+.slider-item {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 100% !important;
+}
+
+.slider-item>div {
+  height: 100%;
+  width: 100%;
+}
+
+.slider-item img {
+  width: 100%;
+}
+
+.awssld__controls button .awssld__controls__arrow-left,
+.awssld__controls button .awssld__controls__arrow-right {
+  fill: #fff;
+  opacity: 1 !important;
+}
+
+.awssld__controls button .awssld__controls__arrow-left::before,
+.awssld__controls button .awssld__controls__arrow-left::after,
+.awssld__controls button .awssld__controls__arrow-right::before,
+.awssld__controls button .awssld__controls__arrow-right::after {
+  background-color: #fff;
+  border: 1px solid black;
+}
 
 .log-yourself-in {
-  margin-top: 2rem;
+  margin: 4rem 0;
   background-color: white;
   display: flex;
   flex-direction: column;
   justify-content: center;
   /* align-items: center; */
-  padding: 1rem 2rem;
+  padding: 2rem 2rem;
   box-shadow:
     -5px -5px 5px rgba(0, 0, 0, 0.1),
     5px 5px 5px rgba(0, 0, 0, 0.1) !important;
@@ -46,9 +78,9 @@
 }
 
 .shop-by-categories {
-  margin-top: 2rem;
+  margin: 2rem 0;
   background-color: white;
-  padding: 1rem;
+  padding: 2rem 1rem;
   box-shadow:
     -5px -5px 5px rgba(0, 0, 0, 0.1),
     5px 5px 5px rgba(0, 0, 0, 0.1) !important;
@@ -105,8 +137,8 @@
 
 .top-sellers {
   background-color: white;
-  padding: 1rem;
-  margin-top: 2rem;
+  padding: 2rem 1rem;
+  margin: 4rem 0;
   box-shadow:
     -5px -5px 5px rgba(0, 0, 0, 0.1),
     5px 5px 5px rgba(0, 0, 0, 0.1) !important;
@@ -125,4 +157,33 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+
+
+.logos {
+  background-color: white;
+  margin: 3rem 0;
+  padding: 2rem 1rem;
+  box-shadow:
+    -5px -5px 5px rgba(0, 0, 0, 0.1),
+    5px 5px 5px rgba(0, 0, 0, 0.1) !important;
+}
+
+.logos .logo-images {
+  display: flex;
+  /* flex-wrap: wrap; */
+  flex-direction: column;
+}
+
+.logos .logo-row {
+  margin: 2rem 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  /* height: 40px; */
+}
+
+.logos .logo-row img {
+  height: 60px;
 }
