--- a/styles/global.css
+++ b/styles/global.css
@@ -16,9 +16,9 @@ body {
 
 body h1 {
   font-size: 1rem;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.01);
   text-align: center;
-  width: 60%;
+  width: 40%;
   margin: 0 auto;
   border-radius: 0 0 5rem 5rem;
   padding: 1.5rem 2rem 0.5rem;
