--- a/styles/Category.css
+++ b/styles/Category.css
@@ -49,7 +49,7 @@
 .categories-all .category.active .category-list {
   position: absolute;
   top: 5%;
-  left: 50%;
+  left: 48%;
   width: 60%;
   display: block;
 }
@@ -64,6 +64,7 @@
 .categories-all .category .category-list li {
   position: relative;
   padding: 10px;
+  margin-left: -2rem;
 }
 
 .categories-all .category .category-list li::after {
@@ -79,4 +80,5 @@
 .categories-all .category .category-list li a {
   color: rgba(0, 0, 0, 0.75);
   text-decoration: none;
+  margin-left: -3rem;
 }
