--- a/styles/Product.css
+++ b/styles/Product.css
@@ -1,6 +1,11 @@
+.product-page {
+  margin-bottom: 7rem;
+}
+
 .product-page-carousel {
   margin-top: 2rem;
   background-color: white;
+  border-radius: 1rem;
 }
 
 .awssld {
@@ -18,6 +23,7 @@
   background-color: white !important;
   height: max-content !important;
   margin: 2rem 0 !important;
+  border-radius: 1rem;
 }
 
 .awssld__bullets {
@@ -31,24 +37,78 @@
   height: 8px !important;
 }
 
-.product-page-name {
-  margin-top: 1rem;
-  font-size: 20px;
+.product-details {
+  padding-top: 1rem;
+  width: 95vw;
+  margin: 0 auto;
+  margin-top: 2rem;
+  border-radius: 1rem;
+  background-color: white;
+  box-shadow:
+    -5px -5px 5px rgba(70, 70, 70, 0.1),
+    5px 5px 5px rgba(70, 70, 70, 0.1) !important;
+  border: 1px solid rgba(70, 70, 70, 0.1);
 }
 
+.product-page-name {
+  margin-top: 1rem;
+  font-size: 22px;
+  font-weight: bolder;
+  padding: 0 20px;
+}
 
+.product-page-discount {
+  margin-top: 1rem;
+  color: green;
+  font-size: 14px;
+  padding: 0 20px;
+}
 
+.product-page-price {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0 20px;
+  margin: 1rem 0;
+}
+
+.product-page-price p:nth-child(1) {
+  font-size: 22px;
+  font-family: brandon-bold;
+}
+
+.product-page-price p:nth-child(2) {
+  color: rgba(70, 70, 70, 0.4);
+  text-decoration: line-through;
+  margin-left: 2rem;
+}
 
 
 
 .product-page-attribute {
-  width: 95vw;
-  box-shadow:
-    -5px -5px 5px rgba(70, 70, 70, 0.1),
-    5px 5px 5px rgba(70, 70, 70, 0.1) !important;
+  margin-top: 1rem;
+  padding: 0 2rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
 
+.product-page-attribute .attribute {
+  border: 1px solid rgba(70, 70, 70, 0.1);
+  border-radius: 1rem;
+  padding: 0.5rem 2rem;
+}
 
+.product-page-attribute .attribute select {
+  padding: 10px;
+  background-color: rgba(70, 70, 70, 0.1);
+}
+
+.product-page-attribute .attribute .attribute-name {
+  color: rgba(70, 70, 70, 0.5);
+  text-align: left;
+  font-size: 14px;
+}
 
 
 
