--- a/styles/Header.css
+++ b/styles/Header.css
@@ -49,3 +49,12 @@
   font-size: 18px;
   fill: rgba(0, 0, 0, 0.4);
 }
+
+.header .header-link a{
+  margin-left: 10px;
+  color: blue;
+  text-decoration: none;
+}
+.header .header-link a:hover{
+  text-decoration: underline;
+}
