--- a/styles/Cart.css
+++ b/styles/Cart.css
@@ -1,10 +1,41 @@
 .cart-page {
-  margin-bottom: 3rem;
+  /* margin-bottom: 3rem; */
 }
 
-.cart-all h2 {
+.cart-all>h2{
+  width: 95vw;
+  margin: 0 auto;
+  border-radius: 1rem;
+  background-color: white;
+  box-shadow:
+    -5px -5px 5px rgba(0, 0, 0, 0.1),
+    5px 5px 5px rgba(0, 0, 0, 0.1) !important;
+    padding: 2rem 0;
+    text-align: center;
+}
+
+.cart-shop-more {
   text-align: center;
-  margin-bottom: 2rem;
+  background-color: white;
+  margin-top: 2rem;
+  padding: 2rem;
+  box-shadow:
+    -5px -5px 5px rgba(0, 0, 0, 0.1),
+    5px 5px 5px rgba(0, 0, 0, 0.1) !important;
+    border-radius: 1rem;
+}
+
+.cart-shop-more a {
+margin-left: 2rem;
+padding: 1rem 1.5rem;
+background-color: rgb(0, 81, 255);
+border-radius: 20px;
+color: white;
+text-decoration: none;
+}
+
+.cart-shop-more a:hover {
+background-color: rgb(0, 63, 145);
 }
 
 .cart-all .loggedout {
@@ -31,10 +62,17 @@
   background-color: rgb(0, 81, 255);
 }
 
-
+.cart-all {
+  width: 95vw;
+  margin: 0 auto;
+  border-radius: 1rem;
+}
 
 .price-detail {
   padding: 2rem 1rem;
+  border-radius: 1rem;
+  width: 95vw;
+  margin: 0 auto;
   box-shadow:
     -5px -5px 5px rgba(0, 0, 0, 0.1),
     5px 5px 5px rgba(0, 0, 0, 0.1) !important;
