--- a/styles/CartProduct.css
+++ b/styles/CartProduct.css
@@ -4,6 +4,7 @@
   box-shadow:
     -5px -5px 5px rgba(0, 0, 0, 0.1),
     5px 5px 5px rgba(0, 0, 0, 0.1) !important;
+    border-radius: 1rem;
 }
 
 
