--- a/styles/Cart.css
+++ b/styles/Cart.css
@@ -8,10 +8,10 @@
   border-radius: 1rem;
   background-color: white;
   box-shadow:
-    -5px -5px 5px rgba(0, 0, 0, 0.1),
-    5px 5px 5px rgba(0, 0, 0, 0.1) !important;
-    padding: 2rem 0;
-    text-align: center;
+  -5px -5px 5px rgba(0, 0, 0, 0.1),
+  5px 5px 5px rgba(0, 0, 0, 0.1) !important;
+  padding: 2rem 0;
+  text-align: center;
 }
 
 .cart-shop-more {
@@ -20,25 +20,35 @@
   margin-top: 2rem;
   padding: 2rem;
   box-shadow:
-    -5px -5px 5px rgba(0, 0, 0, 0.1),
-    5px 5px 5px rgba(0, 0, 0, 0.1) !important;
-    border-radius: 1rem;
+  -5px -5px 5px rgba(0, 0, 0, 0.1),
+  5px 5px 5px rgba(0, 0, 0, 0.1) !important;
+  border-radius: 1rem;
 }
 
 .cart-shop-more a {
-margin-left: 2rem;
-padding: 1rem 1.5rem;
-background-color: rgb(0, 81, 255);
-border-radius: 20px;
-color: white;
-text-decoration: none;
+  margin-left: 2rem;
+  padding: 1rem 1.5rem;
+  background-color: rgb(0, 81, 255);
+  border-radius: 20px;
+  color: white;
+  text-decoration: none;
 }
 
 .cart-shop-more a:hover {
-background-color: rgb(0, 63, 145);
+  background-color: rgb(0, 63, 145);
 }
 
 .cart-all .loggedout {
+  width: 95vw;
+  /* font-size: 1.25rem; */
+  margin: 0 auto;
+  border-radius: 1rem;
+  background-color: white;
+  box-shadow:
+    -5px -5px 5px rgba(0, 0, 0, 0.1),
+    5px 5px 5px rgba(0, 0, 0, 0.1) !important;
+    padding: 2rem 0;
+    text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -46,6 +56,7 @@ background-color: rgb(0, 63, 145);
 }
 
 .cart-all .loggedout a {
+  margin-top: 2rem;
   text-align: center;
   color: white;
   text-decoration: none;
