--- a/styles/Product.css
+++ b/styles/Product.css
@@ -8,15 +8,18 @@
   border-radius: 1rem;
 }
 
+.product-page-carousel .awssld {
+  margin-top: 6rem !important;
+}
+
 .awssld {
   height: 45vh !important;
   margin: 0 auto;
-  margin-top: 6rem !important;
   width: 95vw !important;
   border-radius: 1rem;
-  box-shadow:
+  /* box-shadow:
     -5px -5px 5px rgba(70, 70, 70, 0.1),
-    5px 5px 5px rgba(70, 70, 70, 0.1) !important;
+    5px 5px 5px rgba(70, 70, 70, 0.1) !important; */
 }
 
 .awssld__content {
