--- a/styles/Checkout.css
+++ b/styles/Checkout.css
@@ -1,7 +1,11 @@
 .select-address-all {
+  width: 95vw;
+  margin: 0 auto;
+  border-radius: 1rem;
   margin-bottom: 6rem;
   background-color: white;
   padding: 2rem 0;
+  text-align: center;
   box-shadow:
     -5px -5px 5px rgba(0, 0, 0, 0.1),
     5px 5px 5px rgba(0, 0, 0, 0.1);
@@ -61,6 +65,9 @@
 
 
 .payment-all {
+  width: 95vw;
+  margin: 0 auto;
+  border-radius: 1rem;
   background-color: white;
   padding: 2rem 0;
   box-shadow:
@@ -73,7 +80,9 @@
   cursor: pointer;
   text-align: center;
   padding: 1rem;
-  background-color: rgba(0, 0, 0, 0.1);
   margin: 0.5rem;
   color: blue;
+}
+.payment-all .payment-item:hover {
+  text-decoration: underline;
 }
