--- a/styles/Products.css
+++ b/styles/Products.css
@@ -59,18 +59,21 @@
 .products-page-item a {
   color: black;
   text-decoration: none;
+  width: 100%;
+  padding: 0 10px;
 }
 
 .products-page-item-image {
   min-height: 250px !important;
   min-width: 200px !important;
   cursor: pointer;
+  text-align: center;
 }
 
 .products-page-item-name {
   text-align: left;
   width: 100%;
-  height: 2.5rem;
+  height: 3.5rem;
   cursor: pointer;
 }
 
@@ -90,15 +93,17 @@
 .products-page-item-price {
   display: flex;
   flex-direction: row;
+  align-items: center;
   color: black;
   font-weight: normal;
-  font-size: 16px;
+  font-size: 18px;
 }
 
 .products-page-item-price p:nth-child(2) {
   color: gray;
   text-decoration: line-through;
   margin-left: 1rem;
+  font-size: 14px;
 }
 
 .products-page-item-rating {
