--- a/styles/Cart.css
+++ b/styles/Cart.css
@@ -12,6 +12,7 @@
   5px 5px 5px rgba(0, 0, 0, 0.1) !important;
   padding: 2rem 0;
   text-align: center;
+  font-size: 1.25rem;
 }
 
 .cart-shop-more {
@@ -25,8 +26,11 @@
   border-radius: 1rem;
 }
 
+.cart-shop-more p {
+  margin-bottom: 2rem;
+}
+
 .cart-shop-more a {
-  margin-left: 2rem;
   padding: 1rem 1.5rem;
   background-color: rgb(0, 81, 255);
   border-radius: 20px;
